fix: add a media query - to handle button overflow

--- a/views/static/styles/contact.css
+++ b/views/static/styles/contact.css
@@ -61,30 +61,42 @@
 	visibility: visible;
 	display: flex;
 	flex-direction: column;
-	min-width: 80%;
+	min-width: 40%;
+	max-width: 50%;
+	margin: 10% 25%;
+	padding: 5%;
 	background-color: #4c9850;
 	color: rgb(1, 2, 19);
 	text-align: center;
 	border-radius: 5px;
 	position: fixed;
 	z-index: 1000;
-	left: 5%;
-	top: 15%;
 	font-size: 1.2em;
-	padding: 5%;
 	box-shadow: 0 2px 6px rgb(1, 2, 19);
 	transition: opacity 0.5s, visibility 0.5s;
 }
 
 @media (max-width: 544px) {
 	.toast {
-		font-size: 0.7em;
-		left: 5%;
-		top: 12%;
-		padding: 5% 0%;
+		font-size: 0.7;
+		width: 60%;
+		margin: 4% 20%;
+		padding: 5%;
 	}
 
 	.btn {
 		width: 90%;
+	}
+}
+
+@media (max-width: 310px) {
+	.toast {
+		font-size: 0.7;
+		width: 70%;
+		margin: 4% 5%;
+	}
+
+	.btn {
+		width: 80%;
 	}
 }
